@@ -1,3 +1,12 @@
+2024-02-08  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* tramp-archive-tests.el (tramp-archive-test-file-archive)
+	(tramp-archive-test-archive): Don't use `defconst` if it's not
+	constant.
+
+	* tramp-tests.el (tramp--test-instrument-test-case)
+	(tramp-test01-file-name-syntax): Use more precise regexp.
+
 2024-01-10  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-tests.el (tramp-test26-file-name-completion)
